syntax = "proto3";

package hello;

option java_package = "com.softwareaws.xray.examples.hello";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string greeting = 2;
}

message FailRequest {
    string reason = 1;
}

message FailResponse {
    // Always fail, this proto isn't used
}

service HelloService {
    rpc Hello(HelloRequest) returns (HelloResponse);

    rpc Fail(FailRequest) returns (FailResponse);

    rpc BadRequest(FailRequest) returns (FailResponse);

    rpc Throttled(FailRequest) returns (FailResponse);
}
